--- a/example/html/index.html
+++ b/example/html/index.html
@@ -30,6 +30,6 @@
         workflow.
       </li>
     </ul>
-    <script src="../dist/bundle.js"></script>
+    <script src="../../dist/bundle.js"></script>
   </body>
 </html>
