--- a/example/html/index.html
+++ b/example/html/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soil AI Demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   </head>
   <body data-soil-id="example">
-    <header>
-      <h1>Welcome to Soil AI</h1>
+    <header class="mb-4 border-b p-4">
+      <h1 class="text-2xl font-bold">Soil AI</h1>
     </header>
-    <p>Click on any element and type a message to change it!</p>
-
-    <ul>
-      <li>
-        <strong>Effortless Editing:</strong> Simply click on any element in your app and type a message describing what
-        you want to change.
-      </li>
-      <li><strong>Real-Time Updates:</strong> See changes happen as you asynchronously continue developing.</li>
-      <li>
-        <strong>Flexible Integration:</strong> Works seamlessly with any web application, regardless of framework or
-        platform.
-      </li>
-      <li>
-        <strong>Context-Aware AI:</strong> The AI understands the context of your app, making precise adjustments based
-        on your instructions.
-      </li>
-      <li>
-        <strong>Developer-Friendly:</strong> Soil AI is easy to set up and integrates smoothly into your existing
-        workflow.
-      </li>
-    </ul>
+    <main class="p-3 max-w-[900px] mx-auto">
+      <p class="mb-4">Click on any element and type a message to change it!</p>
+      <ul class="list-disc pl-5">
+        <li class="mb-2">
+          <strong>Effortless Editing:</strong> Simply click on any element in your app and type a message describing what
+          you want to change.
+        </li>
+        <li class="mb-2"><strong>Real-Time Updates:</strong> See changes happen as you asynchronously continue developing.</li>
+        <li class="mb-2">
+          <strong>Flexible Integration:</strong> Works seamlessly with any web application, regardless of framework or
+          platform.
+        </li>
+        <li class="mb-2">
+          <strong>Context-Aware AI:</strong> The AI understands the context of your app, making precise adjustments based
+          on your instructions.
+        </li>
+        <li class="mb-2">
+          <strong>Developer-Friendly:</strong> Soil AI is easy to set up and integrates smoothly into your existing
+          workflow.
+        </li>
+      </ul>
+    </main>
     <script src="../../dist/bundle.js"></script>
   </body>
 </html>
